# sid

./: .gitmodules  MCP_INTEGRATION_CONTEXT.md  flake.nix
dashboard/: pyproject.toml
dashboard/src/sid_dashboard/: __init__.py
dashboard/src/sid_dashboard/static/: app.js  index.html  style.css
mcp-servers/zeroclaw/: pyproject.toml
mcp-servers/zeroclaw/src/zeroclaw_mcp/: __init__.py  __main__.py
patches/: 0001-fix-add-missing-futures-and-async-stream-crate-depen.patch  0002-feat-prepend-ISO-8601-timestamps-to-all-incoming-mes.patch  0003-feat-add-v1-models-endpoint-for-OpenAI-compatible.patch  0003-feat-wire-XMPP-channel-into-channel-registry-and-con.patch  0004-feat-use-full-agent-loop-for-webhook-requests.patch  0004-feat-wire-OpenAI-compatible-v1-chat-completions.patch  0005-feat-add-v1-models-endpoint-for-OpenAI-compatible-mo.patch  0005-feat-add-v1-models-endpoint-for-OpenAI-compatible.patch  0006-feat-preserve-email-subject-in-reply-threading.patch  0006-feat-wire-OpenAI-compatible-v1-chat-completions-endp.patch  0006-feat-wire-OpenAI-compatible-v1-chat-completions.patch  0007-feat-save-sent-emails-to-IMAP-Sent-folder.patch  0007-fix-skip-emails-from-own-address-to-prevent-reply-lo.patch  0007-fix-skip-emails-from-own-address-to-prevent-reply.patch  0008-feat-preserve-email-subject-in-reply-threading.patch  0008-fix-skip-permission-checks-in-Claude-Code-CLI.patch  0009-feat-save-sent-emails-to-IMAP-Sent-folder.patch  0010-feat-add-Claude-vision-API-support-for-image-content.patch  0010-feat-add-channel-context-prefix-to-Telegram-messages.patch  (+23 more)
(+193 files in other folders)
