[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sid-dashboard"
version = "0.1.0"
description = "Web dashboard for Sid AI agent"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[project.scripts]
sid-dashboard = "sid_dashboard:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sid_dashboard"]
