[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeroclaw-mcp"
version = "0.1.0"
description = "MCP server bridging ZeroClaw gateway tools to Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "slixmpp>=1.8.0",
]

[project.scripts]
zeroclaw-mcp = "zeroclaw_mcp:main"
